--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.username=postgres
 spring.datasource.password=Postgres2021
 spring.jpa.generate-ddl=true
 
-spring.mustache.expose-request-attributes=true
+spring.freemarker.expose-request-attributes=true
