--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=Postgres2021
 spring.jpa.generate-ddl=true
 
 spring.freemarker.expose-request-attributes=true
+upload.path=C:/Users/glava/OneDrive/Desktop/SpringBoot/files
